Fix dark mode select showing white text on white bg

--- a/source/scss/_ndeploy.scss
+++ b/source/scss/_ndeploy.scss
@@ -95,7 +95,7 @@ $carddarkhead:		#32383E !default;
 		}
 		.form-control,
 		.custom-select {
-			background-color: transparent;
+			background-color: $carddarkback;
 			border: $border-dark;
 			color: $white;
 		}
